// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render normally 1`] = `
<View
  style={
    Array [
      Object {
        "minHeight": 58,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
        "paddingHorizontal": 20,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "#000000",
            "fontFamily": "System",
            "fontSize": 17,
            "fontWeight": "400",
            "includeFontPadding": false,
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
    >
      title
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "#838387",
            "fontFamily": "System",
            "fontSize": 12,
            "fontWeight": "400",
            "includeFontPadding": false,
            "marginTop": 3,
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;

exports[`should render with custom styles 1`] = `
<TouchableHighlight
  activeOpacity={0.9}
  onPress={[MockFunction]}
  onPressIn={[MockFunction]}
  onPressOut={[MockFunction]}
  underlayColor="cyan"
>
  <View
    style={
      Array [
        Object {
          "minHeight": 58,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "overflow": "hidden",
          "paddingHorizontal": 20,
          "paddingVertical": 4,
        },
        Object {
          "backgroundColor": "yellow",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flexShrink": 0,
          "marginRight": 15,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "image.png",
          }
        }
        style={
          Array [
            Object {
              "height": 29,
              "width": 29,
            },
            Object {
              "tintColor": "blue",
            },
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
          },
          undefined,
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#000000",
              "fontFamily": "System",
              "fontSize": 17,
              "fontWeight": "400",
              "includeFontPadding": false,
              "textAlignVertical": "center",
            },
            Object {
              "color": "red",
            },
          ]
        }
      >
        title
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#838387",
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": "400",
              "includeFontPadding": false,
              "marginTop": 3,
              "textAlignVertical": "center",
            },
            Object {
              "color": "green",
            },
          ]
        }
      >
        subtitle
      </Text>
    </View>
    <Image
      source={
        Object {
          "testUri": "../../../src/table/assets/disclosure-indicator.png",
        }
      }
      style={
        Object {
          "flexShrink": 0,
          "height": 12,
          "marginLeft": 10,
          "tintColor": "#c7c7cc",
          "width": 8,
        }
      }
    />
  </View>
</TouchableHighlight>
`;

exports[`should render with disclosure indicator 1`] = `
<TouchableHighlight
  activeOpacity={1}
  onPress={[MockFunction]}
  underlayColor="#0001"
>
  <View
    style={
      Array [
        Object {
          "minHeight": 43,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "overflow": "hidden",
          "paddingHorizontal": 20,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
          },
          undefined,
        ]
      }
    />
    <Image
      source={
        Object {
          "testUri": "../../../src/table/assets/disclosure-indicator.png",
        }
      }
      style={
        Object {
          "flexShrink": 0,
          "height": 12,
          "marginLeft": 10,
          "tintColor": "#c7c7cc",
          "width": 8,
        }
      }
    />
  </View>
</TouchableHighlight>
`;

exports[`should render with disclosure indicator 2`] = `
<View
  style={
    Array [
      Object {
        "minHeight": 43,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
        "paddingHorizontal": 20,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        undefined,
      ]
    }
  />
  <Image
    source={
      Object {
        "testUri": "../../../src/table/assets/disclosure-indicator.png",
      }
    }
    style={
      Object {
        "flexShrink": 0,
        "height": 12,
        "marginLeft": 10,
        "tintColor": "#c7c7cc",
        "width": 8,
      }
    }
  />
</View>
`;

exports[`should render with disclosure indicator 3`] = `
<TouchableHighlight
  activeOpacity={1}
  onPress={[MockFunction]}
  underlayColor="#0001"
>
  <View
    style={
      Array [
        Object {
          "minHeight": 43,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "overflow": "hidden",
          "paddingHorizontal": 20,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
          },
          undefined,
        ]
      }
    />
    <Image
      source={
        Object {
          "testUri": "../../../src/table/assets/disclosure-indicator.png",
        }
      }
      style={
        Object {
          "flexShrink": 0,
          "height": 12,
          "marginLeft": 10,
          "tintColor": "#c7c7cc",
          "width": 8,
        }
      }
    />
  </View>
</TouchableHighlight>
`;

exports[`should render with image component 1`] = `
<View
  style={
    Array [
      Object {
        "minHeight": 43,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
        "paddingHorizontal": 20,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexShrink": 0,
          "marginRight": 15,
        },
        undefined,
      ]
    }
  >
    <Switch />
  </View>
  <View
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render with image component 2`] = `
<View
  style={
    Array [
      Object {
        "minHeight": 43,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
        "paddingHorizontal": 20,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexShrink": 0,
          "marginRight": 15,
        },
        Object {
          "tintColor": "red",
        },
      ]
    }
  >
    <Switch />
  </View>
  <View
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render with image source 1`] = `
<View
  style={
    Array [
      Object {
        "minHeight": 43,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
        "paddingHorizontal": 20,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexShrink": 0,
        "marginRight": 15,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "image.png",
        }
      }
      style={
        Array [
          Object {
            "height": 29,
            "width": 29,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render with image source 2`] = `
<View
  style={
    Array [
      Object {
        "minHeight": 43,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
        "paddingHorizontal": 20,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexShrink": 0,
        "marginRight": 15,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "image.png",
        }
      }
      style={
        Array [
          Object {
            "height": 29,
            "width": 29,
          },
          Object {
            "tintColor": "red",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render with title and detail component 1`] = `
<View
  style={
    Array [
      Object {
        "minHeight": 43,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
        "paddingHorizontal": 20,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "#000000",
            "fontFamily": "System",
            "fontSize": 17,
            "fontWeight": "400",
            "includeFontPadding": false,
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "marginLeft": 10,
        },
        undefined,
      ]
    }
  >
    <Switch />
  </View>
</View>
`;

exports[`should render without disclosure indicator 1`] = `
<View
  style={
    Array [
      Object {
        "minHeight": 43,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "hidden",
        "paddingHorizontal": 20,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render without disclosure indicator 2`] = `
<TouchableHighlight
  activeOpacity={1}
  onPress={[MockFunction]}
  underlayColor="#0001"
>
  <View
    style={
      Array [
        Object {
          "minHeight": 43,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "overflow": "hidden",
          "paddingHorizontal": 20,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
          },
          undefined,
        ]
      }
    />
  </View>
</TouchableHighlight>
`;
